--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -115,6 +115,9 @@
   text-decoration: none;
   color: #3A4e66;
   margin-bottom: 100px;
+  padding-top:5%;
+  padding-right:5%;
+  padding-left:5%;
 }
 
 .logo {
@@ -150,7 +153,7 @@
   grid-gap: 0px;
   grid-template-columns: repeat(4,1fr);
   grid-template-rows: auto;
-  margin:5%;
+  /* margin:5%; */
 }
 
 /* Navigation position */
@@ -165,6 +168,8 @@
   grid-column: 1/span 4;
   grid-row: 2;
   margin-bottom: 100px;
+  margin-left: 5%;
+  margin-right:5%;
 
 }
 
@@ -242,6 +247,21 @@
   line-height: 150%;
 }
 
+.recent-work-header{
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 5%;
+  margin-right:5%;
+}
+
+.recent-work-header h1{
+    color: #D3AA6C;
+}
+
+.recent-work{
+  margin-left: 5%;
+  margin-right:5%;
+}
 
 .verve-image{
   width: 323px;
@@ -260,14 +280,7 @@
     line-height: 167.23%;
   }
 
-  .recent-work-header{
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
 
-  .recent-work-header h1{
-      color: #D3AA6C;
-  }
 
   /* About me internal grid, positioning on page & properties */
 
@@ -277,6 +290,8 @@
     grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
     justify-items:center;
     margin-bottom: 100px;
+    margin-left: 5%;
+    margin-right:5%;
   }
 
   .about-me{
@@ -297,6 +312,8 @@
     line-height: 150%;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-left: 5%;
+    margin-right:5%;
   }
 
 .about-me-header h1{
@@ -309,8 +326,8 @@
 
 
   .personal-image{
-    width: 323px;
-    height: 323px;
+    width: 325px;
+    height: 325px;
   }
 
   .footer{
@@ -370,18 +387,35 @@
   grid-gap: 20px;
   grid-template-columns: repeat(4,1fr);
   grid-template-rows: auto;
-  margin:5%;
+  /* margin:5%; */
 }
+
+
 
 .bio-title{
   grid-column: 1/span 4;
   grid-row: 2;
   margin-bottom: 100px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
+
+
 
 .bio-title h1{
   color:#D3AA6C;
 }
+
+
+.about-page-pic{
+  width:325px;
+}
+
+  @media screen and (min-width: 991px){
+    .about-page-pic{
+      width:500px;
+    }
+  }
 
 .about-page-bio{
     display: grid;
@@ -389,12 +423,16 @@
     grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
     justify-items:center;
     margin-bottom: 100px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
+
 
 .about-page-bio{
   grid-column: 1/span 4;
   grid-row-start: 6;
 }
+
 
 
   /* PROJECT SPECIFIC */
@@ -406,7 +444,7 @@
   grid-gap: 0px;
   grid-template-columns: repeat(4,1fr);
   grid-template-rows: auto;
-  margin:5%;
+  /* margin:5%; */
 }
 
 
@@ -417,6 +455,8 @@
   grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
   justify-items:center;
   margin-bottom: 100px;
+  margin-left: 5%;
+  margin-right:5%;
 }
 
 
@@ -511,7 +551,10 @@
   .tldr{
     grid-column: 1/span 4;
     grid-row-start: 4;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 100px;
+
   }
 
   @media screen and (min-width: 991px){
@@ -540,6 +583,8 @@
   .discovery-section1{
     grid-column: 1/span 4;
     grid-row-start: 5;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -552,13 +597,22 @@
   .discovery-section2{
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(325px, 1fr));
     justify-items:center;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   .discovery-section2{
     grid-column: 1/span 4;
     grid-row-start: 6;
+  }
+
+  @media screen and (min-width: 991px){
+    .discovery-section2{
+      margin-left: 20%;
+      margin-right: 20%;
+    }
   }
 
   .molly{
@@ -573,6 +627,8 @@
     grid-column: 1/span 4;
     grid-row-start: 7;
     margin-bottom: 100px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -800,6 +856,8 @@
   .information-architecture-indented1{
     grid-column: 1/span 4;
     grid-row-start: 8;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -813,6 +871,10 @@
     grid-column: 1/span 4;
     grid-row-start: 9;
     justify-self: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -863,6 +925,8 @@
   .information-architecture-indented3{
     grid-column: 1/span 4;
     grid-row-start: 10;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -876,6 +940,9 @@
     grid-column: 1/span 4;
     grid-row-start: 11;
     text-align: center;
+    margin-top: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
 
   }
 
@@ -905,6 +972,8 @@
   .site-map-and-content{
     grid-column: 1/span 4;
     grid-row-start: 13;
+    margin-left: 5%;
+    margin-right: 5%;
 
   }
 
@@ -920,6 +989,8 @@
     grid-column: 1/span 4;
     grid-row-start: 14;
     justify-self:center;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   .sitemap-pic{
@@ -939,6 +1010,8 @@
   .sketches-intro{
     grid-column: 1/span 4;
     grid-row-start: 15;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -953,6 +1026,10 @@
     grid-row-start: 16;
     width:300px;
     justify-self:center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -968,8 +1045,8 @@
     grid-column: 1/span 4;
     grid-row-start: 17;
     justify-self:center;
-
-
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
 .wireframes img {
@@ -1011,6 +1088,8 @@
     margin-bottom: 100px;
     grid-column: 1/span 4;
     grid-row-start: 19;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -1025,6 +1104,8 @@
     margin-bottom:50px;
     grid-column: 1/span 4;
     grid-row-start: 20;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -1034,7 +1115,9 @@
     }
   }
 
-
+  .branding-p2{
+  margin-bottom: 50px;
+  }
 
   .branding-idea{
     width: 155.8px;
@@ -1110,7 +1193,8 @@
     grid-column: 1/span 4;
     grid-row-start: 21;
     margin-bottom: 50px;
-
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -1123,33 +1207,62 @@
   .type-chart{
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(325px, 1fr));
     justify-items:center;
     margin-bottom: 50px;
-
+    margin-left: 5%;
+    margin-right: 5%;
   }
+
+  @media screen and (min-width: 991px){
+    .type-chart{
+      margin-left: 20%;
+      margin-right: 20%;
+    }
+  }
+
 
   .type-chart{
     grid-column: 1/span 4;
     grid-row-start: 22;
   }
 
-
-  .type-study{
+  .type-study-1{
     width:60%;
 
+  }
+
+    .type-study-2{
+      width:60%;
+
+    }
+
+
+  @media screen and (min-width: 991px){
+    .type-study-1{
+      width:60%;
+      justify-self:right;
+    }
+
+    .type-study-2{
+      width:60%;
+      justify-self:left;
+    }
   }
 
   .branding-indented3{
     margin-bottom:100px;
     grid-column: 1/span 4;
     grid-row-start: 23;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
       .branding-indented3{
       margin-left: 20%;
       margin-right: 20%;
+
     }
   }
 
@@ -1159,6 +1272,8 @@
     width:100px;
     display:inline-block;
   }
+
+
 
   .color-palette button{
     display: block;
@@ -1239,6 +1354,8 @@
     margin-top: 50px;
     margin-bottom: 50px;
     width:325px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -1251,6 +1368,8 @@
     margin-top: 50px;
     margin-bottom: 50px;
     width:325px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -1262,6 +1381,8 @@
   .final-revision-screens{
     margin-top: 50px;
     width: 325px;
+    margin-left: 5%;
+    margin-right: 5%;
    }
 
    @media screen and (min-width: 991px){
@@ -1274,6 +1395,8 @@
     margin-bottom: 100px;
     grid-column: 1/span 4;
     grid-row-start: 24;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
@@ -1287,6 +1410,8 @@
     margin-bottom: 100px;
     grid-column: 1/span 4;
     grid-row-start: 25;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
