--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -413,9 +413,11 @@
 
   @media screen and (min-width: 991px){
     .about-page-pic{
-      width:500px;
+      width:100%;
+      justify-self:start;
     }
   }
+
 
 .about-page-bio{
     display: grid;
@@ -430,7 +432,7 @@
 
 .about-page-bio{
   grid-column: 1/span 4;
-  grid-row-start: 6;
+  grid-row-start: 3;
 }
 
 
@@ -1119,6 +1121,7 @@
   margin-bottom: 50px;
   }
 
+
   .branding-idea{
     width: 155.8px;
     height: 155.13px;
@@ -1381,8 +1384,7 @@
   .final-revision-screens{
     margin-top: 50px;
     width: 325px;
-    margin-left: 5%;
-    margin-right: 5%;
+
    }
 
    @media screen and (min-width: 991px){
