--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -268,6 +268,14 @@
 
 .recent-work-header h1{
     color: #D3AA6C;
+    text-align: center;
+}
+
+@media screen and (min-width: 991px){
+  .recent-work-header h1{
+      color: #D3AA6C;
+      text-align: left;
+  }
 }
 
 .recent-work{
@@ -378,7 +386,15 @@
 
 .about-me-header h1{
       color: #D3AA6C;
+      text-align: center;
     }
+
+  @media screen and (min-width: 991px){
+    .about-me-header h1{
+          color: #D3AA6C;
+          text-align: left;
+        }
+  }
 
 
   .homepage-portrait{
