--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -1332,6 +1332,10 @@
   margin-bottom: 50px;
   }
 
+.branding-theme{
+
+  text-align: center;
+}
 
   .branding-idea{
     width: 155.8px;
@@ -1481,6 +1485,10 @@
     }
   }
 
+.colors{
+  text-align: center;
+}
+
   .final-colors{
     margin-top:50px;
     margin-bottom: 50px;
@@ -1497,6 +1505,10 @@
     margin-bottom:50px;
 
   }
+
+.hifi-group{
+text-align: center;
+}
 
 .hifi-mockups p{
   margin-bottom: 50px;
@@ -1587,14 +1599,16 @@
   margin-bottom: 50px;
 }
 
+.revision-screens{
+  text-align: center;
+}
 
 
   .menus{
     margin-top: 50px;
     margin-bottom: 50px;
     width:325px;
-    margin-left: 5%;
-    margin-right: 5%;
+
   }
 
   @media screen and (min-width: 991px){
@@ -1607,8 +1621,6 @@
     margin-top: 50px;
     margin-bottom: 50px;
     width:325px;
-    margin-left: 5%;
-    margin-right: 5%;
   }
 
   @media screen and (min-width: 991px){
