adjusting swot header color to white

--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -952,7 +952,7 @@
       font-weight: 900;
       font-size: 20px;
       line-height: 150%;
-      color: rgba(147, 155, 165, 0.2);
+      color: #ffffff;
       text-align: center;
   }
 
